$Id$
Changelog for csi2ncdf
Version 2.2.14: 2006-10-04 (arnold.moene@wur.nl)
* implemented support for TOA5 (similar to that for TOB files)
* did some internal clean up + update of documentation
Version 2.2.13: 2006-08-28 (arnold.moene@wur.nl)
* implemented support for TOB2 and TOB3 (similar to that for TOB1)
* internally type FTYPE_NEWTOB1 was renamed to FTYPE_TOB1 (since it is not
that new anymore)
* Support for IEEE4L (little endian) and IEEE4B (big endian)
Version 2.2.12: 2005-04-20 (arnold.moene@wur.nl)
* NB: there were a number of different versions 2.2.11 floating around on the
webserver. Sorry for the confusion
* Now *really* fixed the problem with text files (this was already fixed by
March 24, but not released through the website, only internally.)
* TOB1 now also may contain floats of type IEEE4L, which appears to be
identical to IEEE4
Version 2.2.11: 2005-03-23 (arnold.moeen@wur.nl)
* added logic to take care of textfiles with no array-id  (switch -a) in first column and
data that are needed from the first column (before we only could get data
starting from column 2, since column 1 was implicitly assumed to be filled
with array-id. But if column 1 contains arrayID it still works (data start in
column 2).
* fixed bug in parsing of text lines: missed the last column
Version 2.2.10: 2004-11-25 (arnold.moene@wur.nl)
* now can read input from standard input as well (making pipes possible)
* implemented listing of TOB1 data for less than the entire file possible
* increased MAXCOL to 256 (but better, dynamic allocation should be used, not
yet implemented).
* converted members of struct columndef (values and follow_val) to double, as
well as value variable in do_conv_csi; also changes in cond_number and
conv_hourmin related to float -> double
* fixed error that one column too many was written to standard output when
reading from a a text file.
* fixed error in txtdecode that would give extra column at end (trying to
decode the newline character as well).